force-app/main/default/objects/Assessment_Provider_Summary_Report__c/Assessment_Provider_Summary_Report__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Assessment Provider Summary Report</label>
</CustomObject>