force-app/main/default/objects/Assessment_Provider_Summary_Report__c/fields/Conga_Conductor_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_Conductor_Id__c</fullName>
    <label>Conga Conductor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>