force-app/main/default/objects/Assessment_Provider_Summary_Report__c/fields/Conga_Print_Report_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_Print_Report_Query_Id__c</fullName>
    <label>Conga Print Report Query Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>