force-app/main/default/objects/Assessment_Provider_Summary_Report__c/fields/Elfi_Print_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Elfi_Print_Template_Id__c</fullName>
    <label>Elfi Print Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>