force-app/main/default/objects/Assessment_Provider_Summary_Report__c/fields/Rhino_View_All_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Rhino_View_All_Template_Id__c</fullName>
    <label>Rhino View All Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>