force-app/main/default/objects/Assessment_Provider_Summary_Report__c/fields/Selected_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Ids__c</fullName>
    <label>Selected Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>